--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ development:
   database: new_depot_development
   pool: 5
   username: root
-  password: proton
+  password: icerain1
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
